feat(blogs/color_picker): add keywords for search engines

--- a/public/blogs/color_picker/index.html
+++ b/public/blogs/color_picker/index.html
@@ -16,26 +16,7 @@
   <meta name="description" content="Juan Marinero - Data Scientist"
 />
 
-  <meta name="keywords" content="          Juan, Marinero, Spain, Europe, Spanish, English, German, Deutsch, Bilingual,
-          Remote Work, Contract, Full-time, Part-time, Job, Job Offer, Data Scientist,
-          Data Science, Machine Learning, AI, Artificial Intelligence, Python, R, SQL, 
-          Statistical Analysis, Data Visualization, Big Data, Deep Learning, Neural Networks, 
-          Predictive Modeling, Data Mining, A/B Testing, Feature Engineering, MLOps, 
-          Natural Language Processing, NLP, Computer Vision, Time Series Analysis, 
-          Cloud Computing, AWS, Azure, GCP, Docker, Kubernetes, TensorFlow, PyTorch, 
-          Scikit-learn, Pandas, NumPy, Spark, Hadoop,
-          ETL, Data Pipelines, Business Intelligence, Analytics, Experimentation, 
-          Reinforcement Learning, Bayesian Statistics, Regression, Classification, 
-          Clustering, Dimensionality Reduction, Optimization, Juan Marinero, Spain, 
-          Europe, Data Scientist, ML Engineer, AI Specialist, Quantitative Analysis, 
-          Research, PhD, Mathematics, Statistics, Programming, Data Governance, 
-          Ethics in AI, Explainable AI, Model Deployment, CI/CD, Agile, Scrum, 
-          Startup, Tech, Consulting, Finance, Healthcare, E-commerce, Retail, 
-          Marketing Analytics, Customer Segmentation, Recommendation Systems, 
-          Anomaly Detection, Fraud Detection, IoT, Edge Computing, Open Source, 
-          GitHub, Kaggle, Competitions, Publications, Research Papers, Teaching, 
-          Mentoring, Public Speaking, Conferences, Workshops, Technical Writing
-        "
+  <meta name="keywords" content="color picker, hex color code, web development, CSS color, graphic design, website customization, UI design, color palette, RGB to HEX, color selector, eyedropper tool, frontend development, accessibility, contrast checker, digital design, quick tool, free tool, color codes, web designer tools, developer utilities, color scheme, HTML color, SVG color"
 />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -84,6 +65,7 @@ Zenity Zenity enables you to create the following types of simple dialog: calend
 Quickstart Showcasting, specially the color picker Zenity is usually pre-installed in standard Ubuntu installations (especially those with GNOME desktop). If missing run sudo apt install zenity">
   <meta itemprop="wordCount" content="435">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
+  <meta itemprop="keywords" content="color picker,hex color code,web development,CSS color,graphic design,website customization,UI design,color palette,RGB to HEX,color selector,eyedropper tool,frontend development,accessibility,contrast checker,digital design,quick tool,free tool,color codes,web designer tools,developer utilities,color scheme,HTML color,SVG color">
 
 
 
