feat(blogs/color_picker): add metadata description
Meta descriptions can technically be any length,
but Google generally truncates snippets to 155-160 chars

--- a/public/blogs/color_picker/index.html
+++ b/public/blogs/color_picker/index.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
 
 
-  <meta name="description" content="Juan Marinero - Data Scientist"
+  <meta name="description" content="A custom color picker that converts between formats, shows terminal previews, and finds the closest color name—all in just 25 lines of zsh code."
 />
 
   <meta name="keywords" content="color picker, hex color code, web development, CSS color, graphic design, website customization, UI design, color palette, RGB to HEX, color selector, eyedropper tool, frontend development, accessibility, contrast checker, digital design, quick tool, free tool, color codes, web designer tools, developer utilities, color scheme, HTML color, SVG color"
@@ -39,10 +39,7 @@
 <meta property="og:url" content="http://localhost:1313/blogs/color_picker/">
   <meta property="og:site_name" content="J. Marinero - Data Scientist & AI Engineer">
   <meta property="og:title" content="🎨 Color Picker and Pastel">
-  <meta property="og:description" content="Enhance your color picker to:
-Convert to multiple color formats (hex, rgb(a), hsl(a)) Display the terminal color preview Get a list of standard color names (e.g. Cornflower Blue, Crimson) that are visually close For all these we just need next two tools and a little of shell scripting.
-Zenity Zenity enables you to create the following types of simple dialog: calendar, notification icon, color selection,…
-Quickstart Showcasting, specially the color picker Zenity is usually pre-installed in standard Ubuntu installations (especially those with GNOME desktop). If missing run sudo apt install zenity">
+  <meta property="og:description" content="A custom color picker that converts between formats, shows terminal previews, and finds the closest color name—all in just 25 lines of zsh code.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="blogs">
@@ -52,17 +49,11 @@ Quickstart Showcasting, specially the color picker Zenity is usually pre-install
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/images/cover-image.jpg">
   <meta name="twitter:title" content="🎨 Color Picker and Pastel">
-  <meta name="twitter:description" content="Enhance your color picker to:
-Convert to multiple color formats (hex, rgb(a), hsl(a)) Display the terminal color preview Get a list of standard color names (e.g. Cornflower Blue, Crimson) that are visually close For all these we just need next two tools and a little of shell scripting.
-Zenity Zenity enables you to create the following types of simple dialog: calendar, notification icon, color selection,…
-Quickstart Showcasting, specially the color picker Zenity is usually pre-installed in standard Ubuntu installations (especially those with GNOME desktop). If missing run sudo apt install zenity">
+  <meta name="twitter:description" content="A custom color picker that converts between formats, shows terminal previews, and finds the closest color name—all in just 25 lines of zsh code.">
 
 
   <meta itemprop="name" content="🎨 Color Picker and Pastel">
-  <meta itemprop="description" content="Enhance your color picker to:
-Convert to multiple color formats (hex, rgb(a), hsl(a)) Display the terminal color preview Get a list of standard color names (e.g. Cornflower Blue, Crimson) that are visually close For all these we just need next two tools and a little of shell scripting.
-Zenity Zenity enables you to create the following types of simple dialog: calendar, notification icon, color selection,…
-Quickstart Showcasting, specially the color picker Zenity is usually pre-installed in standard Ubuntu installations (especially those with GNOME desktop). If missing run sudo apt install zenity">
+  <meta itemprop="description" content="A custom color picker that converts between formats, shows terminal previews, and finds the closest color name—all in just 25 lines of zsh code.">
   <meta itemprop="wordCount" content="435">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
   <meta itemprop="keywords" content="color picker,hex color code,web development,CSS color,graphic design,website customization,UI design,color palette,RGB to HEX,color selector,eyedropper tool,frontend development,accessibility,contrast checker,digital design,quick tool,free tool,color codes,web designer tools,developer utilities,color scheme,HTML color,SVG color">
