feat(blogs/tolkien): add keywords for search engines

--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -16,26 +16,7 @@
   <meta name="description" content="Juan Marinero - Data Scientist"
 />
 
-  <meta name="keywords" content="          Juan, Marinero, Spain, Europe, Spanish, English, German, Deutsch, Bilingual,
-          Remote Work, Contract, Full-time, Part-time, Job, Job Offer, Data Scientist,
-          Data Science, Machine Learning, AI, Artificial Intelligence, Python, R, SQL, 
-          Statistical Analysis, Data Visualization, Big Data, Deep Learning, Neural Networks, 
-          Predictive Modeling, Data Mining, A/B Testing, Feature Engineering, MLOps, 
-          Natural Language Processing, NLP, Computer Vision, Time Series Analysis, 
-          Cloud Computing, AWS, Azure, GCP, Docker, Kubernetes, TensorFlow, PyTorch, 
-          Scikit-learn, Pandas, NumPy, Spark, Hadoop,
-          ETL, Data Pipelines, Business Intelligence, Analytics, Experimentation, 
-          Reinforcement Learning, Bayesian Statistics, Regression, Classification, 
-          Clustering, Dimensionality Reduction, Optimization, Juan Marinero, Spain, 
-          Europe, Data Scientist, ML Engineer, AI Specialist, Quantitative Analysis, 
-          Research, PhD, Mathematics, Statistics, Programming, Data Governance, 
-          Ethics in AI, Explainable AI, Model Deployment, CI/CD, Agile, Scrum, 
-          Startup, Tech, Consulting, Finance, Healthcare, E-commerce, Retail, 
-          Marketing Analytics, Customer Segmentation, Recommendation Systems, 
-          Anomaly Detection, Fraud Detection, IoT, Edge Computing, Open Source, 
-          GitHub, Kaggle, Competitions, Publications, Research Papers, Teaching, 
-          Mentoring, Public Speaking, Conferences, Workshops, Technical Writing
-        "
+  <meta name="keywords" content="J.R.R. Tolkien, Lord of the Rings, The Hobbit, Middle-earth, legendarium, Silmarillion, fantasy literature, mythopoeia, Tolkien studies, high fantasy, English literature, mythology, philology, world-building, Tolkien blog, Tolkien essays, Kai47, lore, Tolkienian, Tolkien fan, Tolkien books, Tolkien analysis, Tolkien&#39;s legacy, fantasy author, indie films, Tolkien Deutsch, Tolkien German, Tolkien podcast"
 />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -81,6 +62,7 @@ If you answered no to most of these questions, then perhaps you should choose an
 But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
   <meta itemprop="wordCount" content="1644">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
+  <meta itemprop="keywords" content="J.R.R. Tolkien,Lord of the Rings,The Hobbit,Middle-earth,legendarium,Silmarillion,fantasy literature,mythopoeia,Tolkien studies,high fantasy,English literature,mythology,philology,world-building,Tolkien blog,Tolkien essays,Kai47,lore,Tolkienian,Tolkien fan,Tolkien books,Tolkien analysis,Tolkien&#39;s legacy,fantasy author,indie films,Tolkien Deutsch,Tolkien German,Tolkien podcast">
 
 
 
