feat(blogs/tolkien): add metadata description
Meta descriptions can technically be any length,
but Google generally truncates snippets to 155-160 chars

--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
 
 
-  <meta name="description" content="Juan Marinero - Data Scientist"
+  <meta name="description" content="My curated list of Tolkien gems: free indie films and audiobooks, podcasts, video games and how to add Middle-earth fonts on your Hugo blog."
 />
 
   <meta name="keywords" content="J.R.R. Tolkien, Lord of the Rings, The Hobbit, Middle-earth, legendarium, Silmarillion, fantasy literature, mythopoeia, Tolkien studies, high fantasy, English literature, mythology, philology, world-building, Tolkien blog, Tolkien essays, Kai47, lore, Tolkienian, Tolkien fan, Tolkien books, Tolkien analysis, Tolkien&#39;s legacy, fantasy author, indie films, Tolkien Deutsch, Tolkien German, Tolkien podcast"
@@ -39,9 +39,7 @@
 <meta property="og:url" content="http://localhost:1313/blogs/tolkien/">
   <meta property="og:site_name" content="J. Marinero - Data Scientist & AI Engineer">
   <meta property="og:title" content="J. Marinero - Data Scientist & AI Engineer">
-  <meta property="og:description" content="Tolkien: books, podcasts and much more! Do you fancy the beauty of languages? Does the original, deep meaning of words (etymology) intrigue you? Do you find Norse (Scandinavian) mythology astonishing? Do you hold [Christian] values—such as holding your oath or the sacred bond of a true friendship?
-If you answered no to most of these questions, then perhaps you should choose another writer—and skip this post, of course!
-But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
+  <meta property="og:description" content="My curated list of Tolkien gems: free indie films and audiobooks, podcasts, video games and how to add Middle-earth fonts on your Hugo blog.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="blogs">
@@ -51,15 +49,11 @@ But for those who appreciate all these things… beware! Once Professor Tolkien 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/images/cover-image.jpg">
   <meta name="twitter:title" content="J. Marinero - Data Scientist & AI Engineer">
-  <meta name="twitter:description" content="Tolkien: books, podcasts and much more! Do you fancy the beauty of languages? Does the original, deep meaning of words (etymology) intrigue you? Do you find Norse (Scandinavian) mythology astonishing? Do you hold [Christian] values—such as holding your oath or the sacred bond of a true friendship?
-If you answered no to most of these questions, then perhaps you should choose another writer—and skip this post, of course!
-But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
+  <meta name="twitter:description" content="My curated list of Tolkien gems: free indie films and audiobooks, podcasts, video games and how to add Middle-earth fonts on your Hugo blog.">
 
 
   <meta itemprop="name" content="J. Marinero - Data Scientist & AI Engineer">
-  <meta itemprop="description" content="Tolkien: books, podcasts and much more! Do you fancy the beauty of languages? Does the original, deep meaning of words (etymology) intrigue you? Do you find Norse (Scandinavian) mythology astonishing? Do you hold [Christian] values—such as holding your oath or the sacred bond of a true friendship?
-If you answered no to most of these questions, then perhaps you should choose another writer—and skip this post, of course!
-But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
+  <meta itemprop="description" content="My curated list of Tolkien gems: free indie films and audiobooks, podcasts, video games and how to add Middle-earth fonts on your Hugo blog.">
   <meta itemprop="wordCount" content="1644">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
   <meta itemprop="keywords" content="J.R.R. Tolkien,Lord of the Rings,The Hobbit,Middle-earth,legendarium,Silmarillion,fantasy literature,mythopoeia,Tolkien studies,high fantasy,English literature,mythology,philology,world-building,Tolkien blog,Tolkien essays,Kai47,lore,Tolkienian,Tolkien fan,Tolkien books,Tolkien analysis,Tolkien&#39;s legacy,fantasy author,indie films,Tolkien Deutsch,Tolkien German,Tolkien podcast">
