--- a/public/blogs/instagram_mosaic/index.html
+++ b/public/blogs/instagram_mosaic/index.html
@@ -16,26 +16,7 @@
   <meta name="description" content="Juan Marinero - Data Scientist"
 />
 
-  <meta name="keywords" content="          Juan, Marinero, Spain, Europe, Spanish, English, German, Deutsch, Bilingual,
-          Remote Work, Contract, Full-time, Part-time, Job, Job Offer, Data Scientist,
-          Data Science, Machine Learning, AI, Artificial Intelligence, Python, R, SQL, 
-          Statistical Analysis, Data Visualization, Big Data, Deep Learning, Neural Networks, 
-          Predictive Modeling, Data Mining, A/B Testing, Feature Engineering, MLOps, 
-          Natural Language Processing, NLP, Computer Vision, Time Series Analysis, 
-          Cloud Computing, AWS, Azure, GCP, Docker, Kubernetes, TensorFlow, PyTorch, 
-          Scikit-learn, Pandas, NumPy, Spark, Hadoop,
-          ETL, Data Pipelines, Business Intelligence, Analytics, Experimentation, 
-          Reinforcement Learning, Bayesian Statistics, Regression, Classification, 
-          Clustering, Dimensionality Reduction, Optimization, Juan Marinero, Spain, 
-          Europe, Data Scientist, ML Engineer, AI Specialist, Quantitative Analysis, 
-          Research, PhD, Mathematics, Statistics, Programming, Data Governance, 
-          Ethics in AI, Explainable AI, Model Deployment, CI/CD, Agile, Scrum, 
-          Startup, Tech, Consulting, Finance, Healthcare, E-commerce, Retail, 
-          Marketing Analytics, Customer Segmentation, Recommendation Systems, 
-          Anomaly Detection, Fraud Detection, IoT, Edge Computing, Open Source, 
-          GitHub, Kaggle, Competitions, Publications, Research Papers, Teaching, 
-          Mentoring, Public Speaking, Conferences, Workshops, Technical Writing
-        "
+  <meta name="keywords" content="Instagram mosaic, Instagram grid, Instagram feed website, social media gallery, web development, CSS grid, CSS masonry, Hugo shortcodes, Instagram API, JavaScript gallery, photo portfolio, website widget, social media integration, frontend development, web design, responsive gallery, image grid layout, Instagram embed, personal website, custom Instagram feed, web project, UI design, CSS tricks, zsh code, process image, code image"
 />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -81,6 +62,7 @@ Table of Contents
 Steps Example Bonus Code Extra: $\LaTeX$ in Hugo Scroll Steps Get the desired image Rename it as img_original.jpg Open the terminal. Change to the image directory (e.g. cd ~/Downloads) Copy the CODE at the end of this post Paste it on a script via $EDITOR create_ig_mosaic.sh (CWD is still ~/Downloads), or in your ~/.zshrc file Make it executable chmod &#43;x create_ig_mosaic.sh Run source ./create_ig_mosaic.sh &amp;&amp; create_ig_mosaic Alternative, no need to rename the file.">
   <meta itemprop="wordCount" content="1359">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
+  <meta itemprop="keywords" content="Instagram mosaic,Instagram grid,Instagram feed website,social media gallery,web development,CSS grid,CSS masonry,Hugo shortcodes,Instagram API,JavaScript gallery,photo portfolio,website widget,social media integration,frontend development,web design,responsive gallery,image grid layout,Instagram embed,personal website,custom Instagram feed,web project,UI design,CSS tricks,zsh code,process image,code image">
 
 
 
