--- a/public/blogs/instagram_mosaic/index.html
+++ b/public/blogs/instagram_mosaic/index.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
 
 
-  <meta name="description" content="Juan Marinero - Data Scientist"
+  <meta name="description" content="Automate the 4:5 Instagram mosaic process with a sub-100-line Zsh script. The guide includes a full, step-by-step example using a random landscape image."
 />
 
   <meta name="keywords" content="Instagram mosaic, Instagram grid, Instagram feed website, social media gallery, web development, CSS grid, CSS masonry, Hugo shortcodes, Instagram API, JavaScript gallery, photo portfolio, website widget, social media integration, frontend development, web design, responsive gallery, image grid layout, Instagram embed, personal website, custom Instagram feed, web project, UI design, CSS tricks, zsh code, process image, code image"
@@ -39,9 +39,7 @@
 <meta property="og:url" content="http://localhost:1313/blogs/instagram_mosaic/">
   <meta property="og:site_name" content="J. Marinero - Data Scientist & AI Engineer">
   <meta property="og:title" content="Create an Instagram mosaic">
-  <meta property="og:description" content="Let’s create a 4:5 Instagram mosaic. Instead of following manual steps, we will achieve this on the terminal.
-Table of Contents
-Steps Example Bonus Code Extra: $\LaTeX$ in Hugo Scroll Steps Get the desired image Rename it as img_original.jpg Open the terminal. Change to the image directory (e.g. cd ~/Downloads) Copy the CODE at the end of this post Paste it on a script via $EDITOR create_ig_mosaic.sh (CWD is still ~/Downloads), or in your ~/.zshrc file Make it executable chmod &#43;x create_ig_mosaic.sh Run source ./create_ig_mosaic.sh &amp;&amp; create_ig_mosaic Alternative, no need to rename the file.">
+  <meta property="og:description" content="Automate the 4:5 Instagram mosaic process with a sub-100-line Zsh script. The guide includes a full, step-by-step example using a random landscape image.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="blogs">
@@ -51,15 +49,11 @@ Steps Example Bonus Code Extra: $\LaTeX$ in Hugo Scroll Steps Get the desired im
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/images/cover-image.jpg">
   <meta name="twitter:title" content="Create an Instagram mosaic">
-  <meta name="twitter:description" content="Let’s create a 4:5 Instagram mosaic. Instead of following manual steps, we will achieve this on the terminal.
-Table of Contents
-Steps Example Bonus Code Extra: $\LaTeX$ in Hugo Scroll Steps Get the desired image Rename it as img_original.jpg Open the terminal. Change to the image directory (e.g. cd ~/Downloads) Copy the CODE at the end of this post Paste it on a script via $EDITOR create_ig_mosaic.sh (CWD is still ~/Downloads), or in your ~/.zshrc file Make it executable chmod &#43;x create_ig_mosaic.sh Run source ./create_ig_mosaic.sh &amp;&amp; create_ig_mosaic Alternative, no need to rename the file.">
+  <meta name="twitter:description" content="Automate the 4:5 Instagram mosaic process with a sub-100-line Zsh script. The guide includes a full, step-by-step example using a random landscape image.">
 
 
   <meta itemprop="name" content="Create an Instagram mosaic">
-  <meta itemprop="description" content="Let’s create a 4:5 Instagram mosaic. Instead of following manual steps, we will achieve this on the terminal.
-Table of Contents
-Steps Example Bonus Code Extra: $\LaTeX$ in Hugo Scroll Steps Get the desired image Rename it as img_original.jpg Open the terminal. Change to the image directory (e.g. cd ~/Downloads) Copy the CODE at the end of this post Paste it on a script via $EDITOR create_ig_mosaic.sh (CWD is still ~/Downloads), or in your ~/.zshrc file Make it executable chmod &#43;x create_ig_mosaic.sh Run source ./create_ig_mosaic.sh &amp;&amp; create_ig_mosaic Alternative, no need to rename the file.">
+  <meta itemprop="description" content="Automate the 4:5 Instagram mosaic process with a sub-100-line Zsh script. The guide includes a full, step-by-step example using a random landscape image.">
   <meta itemprop="wordCount" content="1359">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
   <meta itemprop="keywords" content="Instagram mosaic,Instagram grid,Instagram feed website,social media gallery,web development,CSS grid,CSS masonry,Hugo shortcodes,Instagram API,JavaScript gallery,photo portfolio,website widget,social media integration,frontend development,web design,responsive gallery,image grid layout,Instagram embed,personal website,custom Instagram feed,web project,UI design,CSS tricks,zsh code,process image,code image">
