feat(blogs/hugo_page_bundles): add recommended content section

--- a/public/blogs/hugo_page_bundles/index.html
+++ b/public/blogs/hugo_page_bundles/index.html
@@ -54,7 +54,7 @@
 
   <meta itemprop="name" content="Hugo&#39;s page bundles: the basics">
   <meta itemprop="description" content="Learn how to structure content in Hugo using page and branch bundles. A guide to creating, managing, and troubleshooting your site architecture.">
-  <meta itemprop="wordCount" content="4585">
+  <meta itemprop="wordCount" content="4608">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
   <meta itemprop="keywords" content="Hugo,page bundles,branch bundles,headless bundle,hugo list command,content organization,Hugo templates,template lookup order,leaf bundle,hugo debug,gohugo,static site generator">
 
@@ -1005,7 +1005,13 @@ This explains why <code>hugo list all</code> only shows your regular pages and s
 </span></span><span style="display:flex;"><span>			p.<span style="color:#268bd2">Section</span>(),
 </span></span><span style="display:flex;"><span>		}
 </span></span><span style="display:flex;"><span>	}
-</span></span></code></pre></div>
+</span></span></code></pre></div><h2 id="further-recommended-content">Further recommended content</h2>
+<ul>
+<li><a href="https://www.ii.com/hugo-bundles/">Introduction to Hugo Bundles</a> by <a href="https://www.ii.com/">Infinite Ink</a></li>
+<li><a href="https://www.youtube.com/watch?v=qtIqKaDlqXo&amp;list=PLLAZ4kZ9dFpOnyRlyS-liKL5ReHDcj4G3&amp;index=1">Hugo&rsquo;s video tutorials</a> by Giraffe Academy</li>
+<li><a href="https://www.youtube.com/watch?v=l7PHRA8t4Bw&amp;list=PLE92IfveVXuXTOjdPM_nleN6Cga_d3uJ-&amp;index=1">Hugo&rsquo;s video tutorials</a> by Future Web Design</li>
+</ul>
+
 
   <br>
   <a id="back-to-blogs-index" href="/blogs_index"><i class="fa fa-chevron-left" aria-hidden="true"></i> Blogs</a> 
